Package_Tools/include-C/gmp/gmp.h

typedef unsigned int		mp_limb_t;
typedef int			mp_limb_signed_t;
typedef unsigned long long int	mp_limb_t;
typedef long long int		mp_limb_signed_t;
typedef unsigned long int	mp_limb_t;
typedef long int		mp_limb_signed_t;
typedef unsigned long int	mp_bitcnt_t;
typedef mp_limb_t *		mp_ptr;
typedef const mp_limb_t *	mp_srcptr;
typedef int			mp_size_t;
typedef long int		mp_size_t;
/* The prototypes for gmp_vprintf etc are provided only if va_list is defined,
   via an application having included <stdarg.h>.  Usually va_list is a typedef
   so can't be tested directly, but C99 specifies that va_start is a macro.

   <stdio.h> will define some sort of va_list for vprintf and vfprintf, but
   let's not bother trying to use that since it's not standard and since
   application uses for gmp_vprintf etc will almost certainly require the
   whole <stdarg.h> anyway.  */


/* An empty "throw ()" means the function doesn't throw any C++ exceptions,
   this can save some stack frame info in applications.

   Currently it's given only on functions which never divide-by-zero etc,
   don't allocate memory, and are expected to never need to allocate memory.
   This leaves open the possibility of a C++ throw from a future GMP
   exceptions scheme.

   mpz_set_ui etc are omitted to leave open the lazy allocation scheme
   described in doc/tasks.html.  mpz_get_d etc are omitted to leave open
   exceptions for float overflows.

   Note that  must be given on any inlines the same as on their
   prototypes (for g++ at least, where they're used together).  Note also
   that g++ 3.0 demands that  is before other attributes like
   .  */

/* PORTME: What other compilers have a useful "extern inline"?  "static
   inline" would be an acceptable substitute if the compiler (or linker)
   discards unused statics.  */

 /* gcc has __inline__ in all modes, including strict ansi.  Give a prototype
    for an inline too, so as to correctly specify "dllimport" on windows, in
    case the function is called rather than inlined.
    GCC 4.3 and above with -std=c99 or -std=gnu99 implements ISO C99
    inline semantics, unless -fgnu89-inline is used.  */

/* DEC C (eg. version 5.9) supports "static __inline foo()", even in -std1
   strict ANSI mode.  Inlining is done even when not optimizing (ie. -O0
   mode, which is the default), but an unnecessary local copy of foo is
   emitted unless -O is used.  "extern __inline" is accepted, but the
   "extern" appears to be ignored, ie. it becomes a plain global function
   but which is inlined within its file.  Don't know if all old versions of
   DEC C supported __inline, but as a start let's do the right thing for
   current versions.  */

/* SCO OpenUNIX 8 cc supports "static inline foo()" but not in -Xc strict
   ANSI mode (__STDC__ is 1 in that mode).  Inlining only actually takes
   place under -O.  Without -O "foo" seems to be emitted whether it's used
   or not, which is wasteful.  "extern inline foo()" isn't useful, the
   "extern" is apparently ignored, so foo is inlined if possible but also
   emitted as a global, which causes multiple definition errors when
   building a shared libgmp.  */


/* C++ always has "inline" and since it's a normal feature the linker should
   discard duplicate non-inlined copies, or if it doesn't then that's a
   problem for everyone, not just GMP.  */

/* Don't do any inlining within a configure run, since if the compiler ends
   up emitting copies of the code into the object file it can end up
   demanding the various support routines (like mpn_popcount) for linking,
   making the "alloca" test and perhaps others fail.  And on hppa ia64 a
   pre-release gcc 3.2 was seen not respecting the "extern" in "extern
   __inline__", triggering this problem too.  */

/* By default, don't give a prototype when there's going to be an inline
   version.  Note in particular that Cray C++ objects to the combination of
   prototype and inline.  */




/* Allow direct user access to numerator and denominator of an mpq_t object.  */
#define mpq_numref(Q) (&((Q)->_mp_num))
#define mpq_denref(Q) (&((Q)->_mp_den))
extern mp_limb_t mpn_div_qr_1 (mp_ptr, mp_limb_t *, mp_srcptr, mp_size_t, mp_limb_t);
extern mp_limb_t mpn_div_qr_2 (mp_ptr, mp_ptr, mp_srcptr, mp_size_t, mp_srcptr);
extern mp_size_t mpn_gcd (mp_ptr, mp_ptr, mp_size_t, mp_ptr, mp_size_t);
extern mp_limb_t mpn_gcd_11 (mp_limb_t, mp_limb_t) ;
extern mp_limb_t mpn_gcd_1 (mp_srcptr, mp_size_t, mp_limb_t) ;
extern mp_limb_t mpn_gcdext_1 (mp_limb_signed_t *, mp_limb_signed_t *, mp_limb_t, mp_limb_t);
extern mp_size_t mpn_gcdext (mp_ptr, mp_ptr, mp_size_t *, mp_ptr, mp_size_t, mp_ptr, mp_size_t);
extern size_t mpn_get_str (unsigned char *, int, mp_ptr, mp_size_t);
extern mp_bitcnt_t mpn_hamdist (mp_srcptr, mp_srcptr, mp_size_t)  ;
extern mp_limb_t mpn_lshift (mp_ptr, mp_srcptr, mp_size_t, unsigned int);
extern mp_limb_t mpn_mod_1 (mp_srcptr, mp_size_t, mp_limb_t) ;
extern mp_limb_t mpn_mul (mp_ptr, mp_srcptr, mp_size_t, mp_srcptr, mp_size_t);
extern mp_limb_t mpn_mul_1 (mp_ptr, mp_srcptr, mp_size_t, mp_limb_t);
extern void mpn_mul_n (mp_ptr, mp_srcptr, mp_srcptr, mp_size_t);
extern void mpn_sqr (mp_ptr, mp_srcptr, mp_size_t);
extern mp_limb_t mpn_neg (mp_ptr, mp_srcptr, mp_size_t);
extern void mpn_com (mp_ptr, mp_srcptr, mp_size_t);
extern int mpn_perfect_square_p (mp_srcptr, mp_size_t) ;
extern int mpn_perfect_power_p (mp_srcptr, mp_size_t) ;
extern mp_bitcnt_t mpn_popcount (mp_srcptr, mp_size_t)  ;
extern mp_size_t mpn_pow_1 (mp_ptr, mp_srcptr, mp_size_t, mp_limb_t, mp_ptr);
extern mp_limb_t mpn_preinv_mod_1 (mp_srcptr, mp_size_t, mp_limb_t, mp_limb_t) ;
extern void mpn_random (mp_ptr, mp_size_t);
extern void mpn_random2 (mp_ptr, mp_size_t);
extern mp_limb_t mpn_rshift (mp_ptr, mp_srcptr, mp_size_t, unsigned int);
extern mp_bitcnt_t mpn_scan0 (mp_srcptr, mp_bitcnt_t) ;
extern mp_bitcnt_t mpn_scan1 (mp_srcptr, mp_bitcnt_t) ;
extern mp_size_t mpn_set_str (mp_ptr, const unsigned char *, size_t, int);
extern size_t mpn_sizeinbase (mp_srcptr, mp_size_t, int);
extern mp_size_t mpn_sqrtrem (mp_ptr, mp_ptr, mp_srcptr, mp_size_t);
extern mp_limb_t mpn_sub (mp_ptr, mp_srcptr, mp_size_t, mp_srcptr, mp_size_t);
extern mp_limb_t mpn_sub_1 (mp_ptr, mp_srcptr, mp_size_t, mp_limb_t) ;
extern mp_limb_t mpn_sub_n (mp_ptr, mp_srcptr, mp_srcptr, mp_size_t);
extern mp_limb_t mpn_submul_1 (mp_ptr, mp_srcptr, mp_size_t, mp_limb_t);
extern void mpn_tdiv_qr (mp_ptr, mp_ptr, mp_size_t, mp_srcptr, mp_size_t, mp_srcptr, mp_size_t);
extern void mpn_and_n (mp_ptr, mp_srcptr, mp_srcptr, mp_size_t);
extern void mpn_andn_n (mp_ptr, mp_srcptr, mp_srcptr, mp_size_t);
extern void mpn_nand_n (mp_ptr, mp_srcptr, mp_srcptr, mp_size_t);
extern void mpn_ior_n (mp_ptr, mp_srcptr, mp_srcptr, mp_size_t);
extern void mpn_iorn_n (mp_ptr, mp_srcptr, mp_srcptr, mp_size_t);
extern void mpn_nior_n (mp_ptr, mp_srcptr, mp_srcptr, mp_size_t);
extern void mpn_xor_n (mp_ptr, mp_srcptr, mp_srcptr, mp_size_t);
extern void mpn_xnor_n (mp_ptr, mp_srcptr, mp_srcptr, mp_size_t);
extern void mpn_copyi (mp_ptr, mp_srcptr, mp_size_t);
extern void mpn_copyd (mp_ptr, mp_srcptr, mp_size_t);
extern void mpn_zero (mp_ptr, mp_size_t);
extern mp_limb_t mpn_cnd_add_n (mp_limb_t, mp_ptr, mp_srcptr, mp_srcptr, mp_size_t);
extern mp_limb_t mpn_cnd_sub_n (mp_limb_t, mp_ptr, mp_srcptr, mp_srcptr, mp_size_t);
extern mp_limb_t mpn_sec_add_1 (mp_ptr, mp_srcptr, mp_size_t, mp_limb_t, mp_ptr);
extern mp_size_t mpn_sec_add_1_itch (mp_size_t) ;
extern mp_limb_t mpn_sec_sub_1 (mp_ptr, mp_srcptr, mp_size_t, mp_limb_t, mp_ptr);
extern mp_size_t mpn_sec_sub_1_itch (mp_size_t) ;
extern void mpn_cnd_swap (mp_limb_t,  mp_limb_t *,  mp_limb_t *, mp_size_t);
extern void mpn_sec_mul (mp_ptr, mp_srcptr, mp_size_t, mp_srcptr, mp_size_t, mp_ptr);
extern mp_size_t mpn_sec_mul_itch (mp_size_t, mp_size_t) ;
extern void mpn_sec_sqr (mp_ptr, mp_srcptr, mp_size_t, mp_ptr);
extern mp_size_t mpn_sec_sqr_itch (mp_size_t) ;
extern void mpn_sec_powm (mp_ptr, mp_srcptr, mp_size_t, mp_srcptr, mp_bitcnt_t, mp_srcptr, mp_size_t, mp_ptr);
extern mp_size_t mpn_sec_powm_itch (mp_size_t, mp_bitcnt_t, mp_size_t) ;
extern void mpn_sec_tabselect ( mp_limb_t *,  const mp_limb_t *, mp_size_t, mp_size_t, mp_size_t);
extern mp_limb_t mpn_sec_div_qr (mp_ptr, mp_ptr, mp_size_t, mp_srcptr, mp_size_t, mp_ptr);
extern mp_size_t mpn_sec_div_qr_itch (mp_size_t, mp_size_t) ;
extern void mpn_sec_div_r (mp_ptr, mp_size_t, mp_srcptr, mp_size_t, mp_ptr);
extern mp_size_t mpn_sec_div_r_itch (mp_size_t, mp_size_t) ;
extern int mpn_sec_invert (mp_ptr, mp_ptr, mp_srcptr, mp_size_t, mp_bitcnt_t, mp_ptr);
extern mp_size_t mpn_sec_invert_itch (mp_size_t) ;
// xxxxxxxxxxxxxxx
/*enum
{
  GMP_ERROR_NONE = 0,
  GMP_ERROR_UNSUPPORTED_ARGUMENT = 1,
  GMP_ERROR_DIVISION_BY_ZERO = 2,
  GMP_ERROR_SQRT_OF_NEGATIVE = 4,
  GMP_ERROR_INVALID_ARGUMENT = 8,
  GMP_ERROR_MPZ_OVERFLOW = 16
};
*/

/* Define CC and CFLAGS which were used to build this version of GMP */
#define __GMP_CC "x86_64-linux-gnu-gcc"
#define __GMP_CFLAGS "-g -O2 -fno-omit-frame-pointer -mno-omit-leaf-frame-pointer -ffile-prefix-map=BUILDPATH=. -flto=auto -ffat-lto-objects -fstack-protector-strong -fstack-clash-protection -Wformat -Werror=format-security -fcf-protection -fdebug-prefix-map=BUILDPATH=/usr/src/gmp-2:6.3.0+dfsg-2ubuntu6.1 -O3"
/* Major version number is the value of __GNU_MP__ too, above. */
#define __GNU_MP_VERSION            6
#define __GNU_MP_VERSION_MINOR      3
#define __GNU_MP_VERSION_PATCHLEVEL 0