Package_Tools/include-C/gmp/gmp_backup.pas

function mpn_div_qr_1(para1: Tmp_ptr; para2: Pmp_limb_t; para3: Tmp_srcptr; para4: Tmp_size_t; para5: Tmp_limb_t): Tmp_limb_t; cdecl; external libgmp name '__gmpn_div_qr_1';
function mpn_div_qr_2(para1: Tmp_ptr; para2: Tmp_ptr; para3: Tmp_srcptr; para4: Tmp_size_t; para5: Tmp_srcptr): Tmp_limb_t; cdecl; external libgmp name '__gmpn_div_qr_2';
function mpn_gcd(para1: Tmp_ptr; para2: Tmp_ptr; para3: Tmp_size_t; para4: Tmp_ptr; para5: Tmp_size_t): Tmp_size_t; cdecl; external libgmp name '__gmpn_gcd';
function mpn_gcd_11(para1: Tmp_limb_t; para2: Tmp_limb_t): Tmp_limb_t; cdecl; external libgmp name '__gmpn_gcd_11';
function mpn_gcd_1(para1: Tmp_srcptr; para2: Tmp_size_t; para3: Tmp_limb_t): Tmp_limb_t; cdecl; external libgmp name '__gmpn_gcd_1';
function mpn_gcdext_1(para1: Pmp_limb_signed_t; para2: Pmp_limb_signed_t; para3: Tmp_limb_t; para4: Tmp_limb_t): Tmp_limb_t; cdecl; external libgmp name '__gmpn_gcdext_1';
function mpn_gcdext(para1: Tmp_ptr; para2: Tmp_ptr; para3: Pmp_size_t; para4: Tmp_ptr; para5: Tmp_size_t; para6: Tmp_ptr; para7: Tmp_size_t): Tmp_size_t; cdecl; external libgmp name '__gmpn_gcdext';
function mpn_get_str(para1: pbyte; para2: longint; para3: Tmp_ptr; para4: Tmp_size_t): Tsize_t; cdecl; external libgmp name '__gmpn_get_str';
function mpn_hamdist(para1: Tmp_srcptr; para2: Tmp_srcptr; para3: Tmp_size_t): Tmp_bitcnt_t; cdecl; external libgmp name '__gmpn_hamdist';
function mpn_lshift(para1: Tmp_ptr; para2: Tmp_srcptr; para3: Tmp_size_t; para4: dword): Tmp_limb_t; cdecl; external libgmp name '__gmpn_lshift';
function mpn_mod_1(para1: Tmp_srcptr; para2: Tmp_size_t; para3: Tmp_limb_t): Tmp_limb_t; cdecl; external libgmp name '__gmpn_mod_1';
function mpn_mul(para1: Tmp_ptr; para2: Tmp_srcptr; para3: Tmp_size_t; para4: Tmp_srcptr; para5: Tmp_size_t): Tmp_limb_t; cdecl; external libgmp name '__gmpn_mul';
function mpn_mul_1(para1: Tmp_ptr; para2: Tmp_srcptr; para3: Tmp_size_t; para4: Tmp_limb_t): Tmp_limb_t; cdecl; external libgmp name '__gmpn_mul_1';
procedure mpn_mul_n(para1: Tmp_ptr; para2: Tmp_srcptr; para3: Tmp_srcptr; para4: Tmp_size_t); cdecl; external libgmp name '__gmpn_mul_n';
procedure mpn_sqr(para1: Tmp_ptr; para2: Tmp_srcptr; para3: Tmp_size_t); cdecl; external libgmp name '__gmpn_sqr';
function mpn_neg(para1: Tmp_ptr; para2: Tmp_srcptr; para3: Tmp_size_t): Tmp_limb_t; cdecl; external libgmp name '__gmpn_neg';
procedure mpn_com(para1: Tmp_ptr; para2: Tmp_srcptr; para3: Tmp_size_t); cdecl; external libgmp name '__gmpn_com';
function mpn_perfect_square_p(para1: Tmp_srcptr; para2: Tmp_size_t): longint; cdecl; external libgmp name '__gmpn_perfect_square_p';
function mpn_perfect_power_p(para1: Tmp_srcptr; para2: Tmp_size_t): longint; cdecl; external libgmp name '__gmpn_perfect_power_p';
function mpn_popcount(para1: Tmp_srcptr; para2: Tmp_size_t): Tmp_bitcnt_t; cdecl; external libgmp name '__gmpn_popcount';
function mpn_pow_1(para1: Tmp_ptr; para2: Tmp_srcptr; para3: Tmp_size_t; para4: Tmp_limb_t; para5: Tmp_ptr): Tmp_size_t; cdecl; external libgmp name '__gmpn_pow_1';
function mpn_preinv_mod_1(para1: Tmp_srcptr; para2: Tmp_size_t; para3: Tmp_limb_t; para4: Tmp_limb_t): Tmp_limb_t; cdecl; external libgmp name '__gmpn_preinv_mod_1';
procedure mpn_random(para1: Tmp_ptr; para2: Tmp_size_t); cdecl; external libgmp name '__gmpn_random';
procedure mpn_random2(para1: Tmp_ptr; para2: Tmp_size_t); cdecl; external libgmp name '__gmpn_random2';
function mpn_rshift(para1: Tmp_ptr; para2: Tmp_srcptr; para3: Tmp_size_t; para4: dword): Tmp_limb_t; cdecl; external libgmp name '__gmpn_rshift';
function mpn_scan0(para1: Tmp_srcptr; para2: Tmp_bitcnt_t): Tmp_bitcnt_t; cdecl; external libgmp name '__gmpn_scan0';
function mpn_scan1(para1: Tmp_srcptr; para2: Tmp_bitcnt_t): Tmp_bitcnt_t; cdecl; external libgmp name '__gmpn_scan1';
function mpn_set_str(para1: Tmp_ptr; para2: pbyte; para3: Tsize_t; para4: longint): Tmp_size_t; cdecl; external libgmp name '__gmpn_set_str';
function mpn_sizeinbase(para1: Tmp_srcptr; para2: Tmp_size_t; para3: longint): Tsize_t; cdecl; external libgmp name '__gmpn_sizeinbase';
function mpn_sqrtrem(para1: Tmp_ptr; para2: Tmp_ptr; para3: Tmp_srcptr; para4: Tmp_size_t): Tmp_size_t; cdecl; external libgmp name '__gmpn_sqrtrem';
function mpn_sub(para1: Tmp_ptr; para2: Tmp_srcptr; para3: Tmp_size_t; para4: Tmp_srcptr; para5: Tmp_size_t): Tmp_limb_t; cdecl; external libgmp name '__gmpn_sub';
function mpn_sub_1(para1: Tmp_ptr; para2: Tmp_srcptr; para3: Tmp_size_t; para4: Tmp_limb_t): Tmp_limb_t; cdecl; external libgmp name '__gmpn_sub_1';
function mpn_sub_n(para1: Tmp_ptr; para2: Tmp_srcptr; para3: Tmp_srcptr; para4: Tmp_size_t): Tmp_limb_t; cdecl; external libgmp name '__gmpn_sub_n';
function mpn_submul_1(para1: Tmp_ptr; para2: Tmp_srcptr; para3: Tmp_size_t; para4: Tmp_limb_t): Tmp_limb_t; cdecl; external libgmp name '__gmpn_submul_1';
procedure mpn_tdiv_qr(para1: Tmp_ptr; para2: Tmp_ptr; para3: Tmp_size_t; para4: Tmp_srcptr; para5: Tmp_size_t; para6: Tmp_srcptr; para7: Tmp_size_t); cdecl; external libgmp name '__gmpn_tdiv_qr';
procedure mpn_and_n(para1: Tmp_ptr; para2: Tmp_srcptr; para3: Tmp_srcptr; para4: Tmp_size_t); cdecl; external libgmp name '__gmpn_and_n';
procedure mpn_andn_n(para1: Tmp_ptr; para2: Tmp_srcptr; para3: Tmp_srcptr; para4: Tmp_size_t); cdecl; external libgmp name '__gmpn_andn_n';
procedure mpn_nand_n(para1: Tmp_ptr; para2: Tmp_srcptr; para3: Tmp_srcptr; para4: Tmp_size_t); cdecl; external libgmp name '__gmpn_nand_n';
procedure mpn_ior_n(para1: Tmp_ptr; para2: Tmp_srcptr; para3: Tmp_srcptr; para4: Tmp_size_t); cdecl; external libgmp name '__gmpn_ior_n';
procedure mpn_iorn_n(para1: Tmp_ptr; para2: Tmp_srcptr; para3: Tmp_srcptr; para4: Tmp_size_t); cdecl; external libgmp name '__gmpn_iorn_n';
procedure mpn_nior_n(para1: Tmp_ptr; para2: Tmp_srcptr; para3: Tmp_srcptr; para4: Tmp_size_t); cdecl; external libgmp name '__gmpn_nior_n';
procedure mpn_xor_n(para1: Tmp_ptr; para2: Tmp_srcptr; para3: Tmp_srcptr; para4: Tmp_size_t); cdecl; external libgmp name '__gmpn_xor_n';
procedure mpn_xnor_n(para1: Tmp_ptr; para2: Tmp_srcptr; para3: Tmp_srcptr; para4: Tmp_size_t); cdecl; external libgmp name '__gmpn_xnor_n';
procedure mpn_copyi(para1: Tmp_ptr; para2: Tmp_srcptr; para3: Tmp_size_t); cdecl; external libgmp name '__gmpn_copyi';
procedure mpn_copyd(para1: Tmp_ptr; para2: Tmp_srcptr; para3: Tmp_size_t); cdecl; external libgmp name '__gmpn_copyd';
procedure mpn_zero(para1: Tmp_ptr; para2: Tmp_size_t); cdecl; external libgmp name '__gmpn_zero';
function mpn_cnd_add_n(para1: Tmp_limb_t; para2: Tmp_ptr; para3: Tmp_srcptr; para4: Tmp_srcptr; para5: Tmp_size_t): Tmp_limb_t; cdecl; external libgmp name '__gmpn_cnd_add_n';
function mpn_cnd_sub_n(para1: Tmp_limb_t; para2: Tmp_ptr; para3: Tmp_srcptr; para4: Tmp_srcptr; para5: Tmp_size_t): Tmp_limb_t; cdecl; external libgmp name '__gmpn_cnd_sub_n';
function mpn_sec_add_1(para1: Tmp_ptr; para2: Tmp_srcptr; para3: Tmp_size_t; para4: Tmp_limb_t; para5: Tmp_ptr): Tmp_limb_t; cdecl; external libgmp name '__gmpn_sec_add_1';
function mpn_sec_add_1_itch(para1: Tmp_size_t): Tmp_size_t; cdecl; external libgmp name '__gmpn_sec_add_1_itch';
function mpn_sec_sub_1(para1: Tmp_ptr; para2: Tmp_srcptr; para3: Tmp_size_t; para4: Tmp_limb_t; para5: Tmp_ptr): Tmp_limb_t; cdecl; external libgmp name '__gmpn_sec_sub_1';
function mpn_sec_sub_1_itch(para1: Tmp_size_t): Tmp_size_t; cdecl; external libgmp name '__gmpn_sec_sub_1_itch';
procedure mpn_cnd_swap(para1: Tmp_limb_t; para2: Pmp_limb_t; para3: Pmp_limb_t; para4: Tmp_size_t); cdecl; external libgmp name '__gmpn_cnd_swap';
procedure mpn_sec_mul(para1: Tmp_ptr; para2: Tmp_srcptr; para3: Tmp_size_t; para4: Tmp_srcptr; para5: Tmp_size_t; para6: Tmp_ptr); cdecl; external libgmp name '__gmpn_sec_mul';
function mpn_sec_mul_itch(para1: Tmp_size_t; para2: Tmp_size_t): Tmp_size_t; cdecl; external libgmp name '__gmpn_sec_mul_itch';
procedure mpn_sec_sqr(para1: Tmp_ptr; para2: Tmp_srcptr; para3: Tmp_size_t; para4: Tmp_ptr); cdecl; external libgmp name '__gmpn_sec_sqr';
function mpn_sec_sqr_itch(para1: Tmp_size_t): Tmp_size_t; cdecl; external libgmp name '__gmpn_sec_sqr_itch';
procedure mpn_sec_powm(para1: Tmp_ptr; para2: Tmp_srcptr; para3: Tmp_size_t; para4: Tmp_srcptr; para5: Tmp_bitcnt_t; para6: Tmp_srcptr; para7: Tmp_size_t; para8: Tmp_ptr); cdecl; external libgmp name '__gmpn_sec_powm';
function mpn_sec_powm_itch(para1: Tmp_size_t; para2: Tmp_bitcnt_t; para3: Tmp_size_t): Tmp_size_t; cdecl; external libgmp name '__gmpn_sec_powm_itch';
procedure mpn_sec_tabselect(para1: Pmp_limb_t; para2: Pmp_limb_t; para3: Tmp_size_t; para4: Tmp_size_t; para5: Tmp_size_t); cdecl; external libgmp name '__gmpn_sec_tabselect';
function mpn_sec_div_qr(para1: Tmp_ptr; para2: Tmp_ptr; para3: Tmp_size_t; para4: Tmp_srcptr; para5: Tmp_size_t; para6: Tmp_ptr): Tmp_limb_t; cdecl; external libgmp name '__gmpn_sec_div_qr';
function mpn_sec_div_qr_itch(para1: Tmp_size_t; para2: Tmp_size_t): Tmp_size_t; cdecl; external libgmp name '__gmpn_sec_div_qr_itch';
procedure mpn_sec_div_r(para1: Tmp_ptr; para2: Tmp_size_t; para3: Tmp_srcptr; para4: Tmp_size_t; para5: Tmp_ptr); cdecl; external libgmp name '__gmpn_sec_div_r';
function mpn_sec_div_r_itch(para1: Tmp_size_t; para2: Tmp_size_t): Tmp_size_t; cdecl; external libgmp name '__gmpn_sec_div_r_itch';
function mpn_sec_invert(para1: Tmp_ptr; para2: Tmp_ptr; para3: Tmp_srcptr; para4: Tmp_size_t; para5: Tmp_bitcnt_t; para6: Tmp_ptr): longint; cdecl; external libgmp name '__gmpn_sec_invert';
function mpn_sec_invert_itch(para1: Tmp_size_t): Tmp_size_t; cdecl; external libgmp name '__gmpn_sec_invert_itch';

const
  GMP_ERROR_NONE = 0;
  GMP_ERROR_UNSUPPORTED_ARGUMENT = 1;
  GMP_ERROR_DIVISION_BY_ZERO = 2;
  GMP_ERROR_SQRT_OF_NEGATIVE = 4;
  GMP_ERROR_INVALID_ARGUMENT = 8;
  GMP_ERROR_MPZ_OVERFLOW = 16;

  __GMP_CC = 'x86_64-linux-gnu-gcc';
  __GMP_CFLAGS = '-g -O2 -fno-omit-frame-pointer -mno-omit-leaf-frame-pointer -ffile-prefix-map=BUILDPATH=. -flto=auto -ffat-lto-objects -fstack-protector-strong -fstack-clash-protection -Wformat -Werror=format-security -fcf-protection -fdebug-prefix-map=BUILDPATH=/usr/src/gmp-2:6.3.0+dfsg-2ubuntu6.1 -O3';

  __GNU_MP_VERSION = 6;
  __GNU_MP_VERSION_MINOR = 3;
  __GNU_MP_VERSION_PATCHLEVEL = 0;
  __GNU_MP_RELEASE = (__GNU_MP_VERSION * 10000 + __GNU_MP_VERSION_MINOR * 100 + __GNU_MP_VERSION_PATCHLEVEL);


function mpq_numref(Q: Pmpq_struct): Pmpz_struct;
function mpq_denref(Q: Pmpq_struct): Pmpz_struct;


// === Konventiert am: 21-4-25 15:21:24 ===


implementation


function mpq_numref(Q: Pmpq_struct): Pmpz_struct;
begin
  mpq_numref := @(Q^._mp_num);
end;

function mpq_denref(Q: Pmpq_struct): Pmpz_struct;
begin
  mpq_denref := @(Q^._mp_den);
end;

end.
